--- a/frontend/src/HomePageBody/HomeBody.css
+++ b/frontend/src/HomePageBody/HomeBody.css
@@ -1,11 +1,11 @@
-.body--inputs{
+.home-body{
+    justify-content: center;
     gap: 1rem;
     list-style: none;
     display: flex;
 }
 
 .input{
-    width: 100%;
     height: 2rem;
     border: 1px solid #ccc;
     border-radius: 5px;
