--- a/frontend/src/LoginPage/LoginPage.css
+++ b/frontend/src/LoginPage/LoginPage.css
@@ -1,7 +1,7 @@
 .wrapper{
     position: relative;
-    width: 400px;
-    height: 440px;
+    width: 35%;
+    height: 60%;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .5);
     margin-left: auto;
@@ -33,10 +33,10 @@
 .input-box{
     position: relative;
     width: 80%;
-    height: 50px;
+    height: 45px;
     border-bottom: 2px solid #162938;
     margin: 30px 0;
-    font-size: 1em;
+    font-size: 1rem;
     color:#162938;
     font-weight: 600;
 
@@ -47,7 +47,7 @@
     top: 50%;
     left: 5px;
     transform: translateY(-50%);
-    font-size: 1em;
+    font-size: 1rem;
     color: #162938;
     font-weight: 500;
     pointer-events: none;
@@ -84,7 +84,27 @@
     outline: none;
     border-radius: 6px;
     cursor: pointer;
-    font-size: 1em;
+    font-size: 1rem;
     color: #fff;
     font-weight: 500;
+}
+
+.login-register{
+    font-size:0.9rem;
+    color:#162938;
+    text-align:left;
+    font-weight: 500;
+    margin: 25px 0 10px;
+}
+
+.login-register p button {
+    border: none;
+    background: fixed;
+    font-size: 0.95rem;
+    color:#0c0115;
+    font-weight: 550;
+}
+
+.login-register p button:hover {
+    text-decoration: underline;
 }
