--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,12 @@
-.body{
+body{
     background-image: url("./Template/Background.png");
     background-repeat: no-repeat;
-    background-size: cover;
     background-position: center;
     background-blend-mode: lighten;
+    background-size: cover;
+    height: 100%;
+    top: 20%;
+}
+body {
+    background-color: rgb(217, 202, 237);
 }
