--- a/frontend/src/LoginPage/LoginPage.css
+++ b/frontend/src/LoginPage/LoginPage.css
@@ -13,17 +13,27 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 5%;
 }
 
 .wrapper .login-form{
     width:100%;
-    padding: 40px;
+    padding: 10%;
     margin-left: auto;
     margin-right: auto;
 }
 
+@media screen and (max-width: 600px) {
+    .wrapper{
+        width: 80%;
+        height: 100%;
+        border-radius: 6px;
+        margin-top: 2%;
+    }
+}
+
 .login-form .login-header{
-    font-size: 1.75em;
+    font-size: 1.75rem;
     color: #232323;
     text-align: justify;
     font-family: "Helvetica";
@@ -37,6 +47,7 @@
     border-bottom: 2px solid #162938;
     margin: 30px 0;
     font-size: 1rem;
+    font-size: 1rem;
     color:#162938;
     font-weight: 600;
 
@@ -47,6 +58,7 @@
     top: 50%;
     left: 5px;
     transform: translateY(-50%);
+    font-size: 1rem;
     font-size: 1rem;
     color: #162938;
     font-weight: 500;
