--- a/frontend/src/LoginPage/LoginPage.css
+++ b/frontend/src/LoginPage/LoginPage.css
@@ -120,3 +120,11 @@
 .login-register p button:hover {
     text-decoration: underline;
 }
+.error {
+    color: red;
+    font-size: 0.8rem;
+    font-weight: 500;
+    margin: 0;
+    padding: 0;
+    text-align: left;
+}
