--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,12 +1,25 @@
+body , html {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: rgb(217, 202, 237);
+}
+#root {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
 body{
-    background-image: url("./Template/Background.png");
+    background-image: url("..\\public\\morning.jpg");
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
+    background-size: 100%;
     background-blend-mode:normal;
-    height: 100%;
-    top: 20%;
-}
-body {
-    background-color: rgb(217, 202, 237);
 }
