--- a/frontend/src/HomePageBody/HomeBody.css
+++ b/frontend/src/HomePageBody/HomeBody.css
@@ -1,4 +1,5 @@
 .home-body{
+    height: 100%;
     width: 100%;
     position: relative;
     margin-left: auto;
@@ -215,8 +216,8 @@
         align-items: center;
         gap: 5%;
     }
+    body{
+        background-image: none!important;
+    }
 }
 
-body {
-    background-image: url("..\\..\\public\\morning.jpg")!important;
-}
