--- a/frontend/src/LoginPage/LoginPage.css
+++ b/frontend/src/LoginPage/LoginPage.css
@@ -113,7 +113,7 @@
     border: none;
     background: fixed;
     font-size: 0.95rem;
-    color:#0c0115;
+    color:#ccc6c6;
     font-weight: 550;
 }
 
