--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,7 +8,7 @@ body , html {
     sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: rgb(217, 202, 237);
+    background: fixed;
 }
 #root {
     height: 100%;
