--- a/frontend/src/HomePageBody/HomeBody.css
+++ b/frontend/src/HomePageBody/HomeBody.css
@@ -158,6 +158,20 @@
     margin-left: 7%;
 }
 
+.age .class-type{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 2%;
+    color:#162938;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    font-size: 1.1rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    margin-left: 7%;
+}
+
 .choose-time{
     display: flex;
     flex-direction: row;
