--- a/frontend/src/FlightSchedule/Flight.css
+++ b/frontend/src/FlightSchedule/Flight.css
@@ -42,3 +42,15 @@ tr td
     padding: 10px;
     text-align: center;
 }
+.loading {
+    height: 100%;
+    background-image: url("C:/Users/venka/Downloads/3qDI.gif") !important;
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+.loading h1 {
+    margin-top: 20%;
+}
