--- a/frontend/src/FlightSchedule/Flight.css
+++ b/frontend/src/FlightSchedule/Flight.css
@@ -44,7 +44,8 @@ tr td
 }
 .loading {
     height: 100%;
-    background-image: url("C: /Users/venka/Documents/ATBCS/frontend/public/3qDI.gif") !important;
+    background-image: url("../../public/3qDI.gif") !important;
+    background-blend-mode: lighten;
     position: absolute;
     width: 100%;
     text-align: center;
