--- a/frontend/src/HomePageBody/about.css
+++ b/frontend/src/HomePageBody/about.css
@@ -1,88 +1,96 @@
-.about{
-    margin-top: 0px;
-    height: 100%;
-    width: 60%;
-    margin-left: auto;
-    margin-right: auto;
-    background-blend-mode: lighten;
-    border-radius: 10px;
-    backdrop-filter: blur(6px);
-    background-color: rgba(220, 217, 247, 0.7);
+.about {
+  margin-top: 50px;
+  height: 100%;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  background-blend-mode: lighten;
+  border-radius: 10px;
+  backdrop-filter: blur(5px);
+  background-color: rgba(220, 217, 247, 0.3);
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
-.about .header
-{
-    text-align: center;
-    color: black;
-    font-family: 'fantasy';
-    font-size: 1.75rem;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin-top: 7px;
-    margin-bottom: 7px;
-    width: 85%;
-    border-radius: 5px;
-    box-shadow: 0 0 5px 0 rgba(0,0,0,0.2);
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
+.about .header {
+  text-align: center;
+  color: black;
+  font-family: "fantasy";
+  font-size: 1.75rem;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-top: 7px;
+  margin-bottom: 7px;
+  width: 85%;
+  border-radius: 5px;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
-.about .about-us{
-    border-radius: 6px;
-    margin-top: 0%;
-    height: 80%;
-}
-
-.about-us .header{
-    text-align: center;
-    color: black;
-    font-family: 'fantasy';
-    font-style: italic;
-    font-size: 1.75rem;
+.about .about-us {
+  border-radius: 6px;
+  margin-top: 0%;
+  height: 80%;
 }
 
-.about-us .content{
-    text-align: center;
-    color: rgb(110, 34, 224);
-    font-family: 'cursive';
-    font-style: italic;
-    font-size: 1.25rem;
-    padding-left: 30px;
-    padding-right: 30px;
+.about-us .header {
+  text-align: center;
+  color: black;
+  font-family: "fantasy";
+  font-style: italic;
+  font-size: 1.75rem;
 }
 
-.about h2{
-    text-align: center;
-    color: black;
-    font-family: 'fantasy';
-    font-style: italic;
-    font-size: 1.75rem;
+.about-us .content {
+  text-align: center;
+  color: rgb(110, 34, 224);
+  font-family: "cursive";
+  font-style: italic;
+  font-size: 1.25rem;
+  padding-top: 10px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
-.about .services-text{
-    text-align: left;
-    color: rgb(110, 34, 224);
-    font-family: 'cursive';
-    font-style: italic;
-    font-size: 1.2rem;
-    padding-left: 30px;
+.about h2 {
+  text-align: center;
+  color: black;
+  font-family: "fantasy";
+  font-style: italic;
+  font-size: 1.75rem;
+  padding: 5px;
 }
 
-.about .service-list{
-    list-style-type: none;
-    padding-left: 50px;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 10px;
+.about .services-text {
+  text-align: center;
+  color: rgb(110, 34, 224);
+  font-family: "cursive";
+  font-style: italic;
+  font-size: 1.5rem;
+  /* padding-left: 30px; */
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
-.about .airports{
-    text-align: left;
-    color: black;
-    font-family: 'fantasy';
-    font-style: italic;
-    font-size: 1rem;
-    padding-left: 10px;
+.about .service-list {
+  list-style-type: none;
+  padding-left: 50px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 10px;
+  /* padding-left: 10px;
+  padding-right: 10px; */
 }
 
-
+.about .airports {
+  text-align: left;
+  color: black;
+  font-weight: 500;
+  font-family: "fantasy";
+  font-style: italic;
+  font-size: 1rem;
+  padding-left: 10px;
+}
