--- a/frontend/src/FlightSchedule/Placemodify.css
+++ b/frontend/src/FlightSchedule/Placemodify.css
@@ -1,13 +1,12 @@
 .place-modify {
     width: 90%;
     margin: 0 auto;
-    background-color: #c5ef70b6;
+    background-color: rgba(220, 217, 247, 0.7);
     border-radius: 5px;
     padding: 10px;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
     margin-top: 20px;
     margin-bottom: 20px;
-    justify-content: center;
     align-items: center;
     display: flex;
     flex-direction: column;
@@ -15,32 +14,52 @@
     gap: 2%;
 }
 
-.optionsmod .way{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    width: max-content; 
-}
-
-.optionsmod , .agemod , .dateplace {
+.place-modify-form{
     width: 90%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
 }
 
-.choose-timemod {
+.way{
     display: flex;
     flex-direction: row;
-    align-items: center;
-    gap: 2%;
+    gap: 3%;
+    margin-left: 0%;
+    margin-bottom: 1%;
+}
+
+.agemod{
+    display: flex;
+    width:100%;
+    flex-direction: row;
+    gap: 4%;
+    margin-bottom: 1%;
+}
+
+.place{
+    border-radius: 5px;
+}
+
+.place fieldset{
+    height: 80%;
+}
+
+.choose-timemod{
+    display: flex;
+    flex-direction: row;
+    gap: 35%;
+}
+
+.modify{
     margin-top: 1%;
-    margin-bottom: 3%;
+    margin-left: 80%;
 }
 
-.choose-timemod .time {
-    margin-right: 5%;
-    display: flex;
-    flex-direction: row
+.modify .modify-button{
+    height: 40px;
+    width: 100%;
+    background-color: #162938;
+    color: #fff;
+    font-size: 1rem;
+    border-radius: 6px;
+    outline: none;
 }
+
