--- a/frontend/src/HomePageBody/about.css
+++ b/frontend/src/HomePageBody/about.css
@@ -94,3 +94,36 @@
   font-size: 1rem;
   padding-left: 10px;
 }
+
+.contacts-content{
+  display: flex;
+  flex-direction: row;
+}
+
+.contacts-text{
+  text-align: left;
+  color: rgb(110, 34, 224);
+  font-family: "cursive";
+  font-style: italic;
+  font-size: 1.25rem;
+  padding-top: 10px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.contact-email, .contact-phone{
+  text-align: left;
+  color: black;
+  font-weight: 500;
+  font-family: "fantasy";
+  font-style: italic;
+  font-size: 1.2rem;
+  padding-left: 30px;
+}
+
+.contacts-content button{
+  width: 100%;
+  height: 40px;
+  margin-top: 100%;
+  background-color: black;
+}
