--- a/frontend/src/Manage/Manage.css
+++ b/frontend/src/Manage/Manage.css
@@ -86,8 +86,9 @@
   }
   
   .passenger-list tr:nth-child(even){background-color: #f2f2f2;}
+  .passenger-list tr:nth-child(odd){background-color: #ecebe5;}
   
-  .passenger-list tr:hover {background-color: #ddd;}
+  .passenger-list tr:hover {background-color: #dddddd;}
   
   .passenger-list th {
     padding-top: 12px;
@@ -106,6 +107,10 @@
     border-radius: 6px;
     background-color: rgb(237, 86, 111);
     color: #fff;
+  }
+  .passenger-list button:hover{
+    background-color: rgb(0, 0, 0);
+    color: white;
   }
 
     .passenger-list h3{
